--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
 			<version>2.1.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>net.sourceforge.nekohtml</groupId>
+			<artifactId>nekohtml</artifactId>
+			<version>1.9.21</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
