--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@
 			<version>1.9.21</version>
 		</dependency>
 
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
