--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.thymeleaf.mode=LEGACYHTML5
-spring.profiles.active=prod
+spring.profiles.active=dev
 default.to.address=rajmane.aniket1@gmail.com
